Fix issues with Our sponsors on small screens

--- a/src/public/less/components/sponsors/our-sponsors.less
+++ b/src/public/less/components/sponsors/our-sponsors.less
@@ -27,6 +27,11 @@
 			padding: 20px 30px;
 			margin: 0 15px 25px;
 
+			@media (max-width: @screen-xs-max) {
+				padding: 20px 15px;
+				margin: 0 0 25px;
+			}
+
 			@media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
 				margin: 0 0 25px;
 			}
